fix little css bug on mobile

--- a/src/components/Episode.module.css
+++ b/src/components/Episode.module.css
@@ -18,7 +18,9 @@
   background: transparent;
   z-index: 1;
   height: 80%;
-  aspect-ratio: 1;
+  width: 80%;
+  padding: 0;
+  margin: 0;
   justify-self: center;
   align-self: center;
   border-radius: 50%;
